# PokerSquares

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt
data/: pokerSquares.xml
data/images/cards/: README.txt
src/: card.h  deck.h  main.cpp  pokersquaresboard.h
